<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F3E251"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_page"
                android:textColor="#2A6491"
                android:textSize="24sp"/>

            <View
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_marginStart="5dp"
                android:background="#2A6491"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ini_adalah_halaman_beranda"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:cardElevation="13dp"
        app:cardCornerRadius="10dp"
        android:focusable="true"
        app:cardBackgroundColor="#DDDADA">


        <LinearLayout
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitoring_controlling_system"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kolam_ikan_hias_koi"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_telkom"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_monitoring"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#2A6491"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="30dp"
                    android:text="Monitoring"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:src="@drawable/monitor1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_controlling"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#2A6491"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/controlling"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:src="@drawable/control1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/sp_home_page"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/information"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tv_isiinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/anda_dapat_memilih_salah_satu_opsi_pada_menu_ini_anda_dapat_memilih_monitoring_untuk_memonitor_kondisi_kolam_atau_anda_dapat_memilih_controlling_untuk_mengatur_kondisi_kolam"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:text="@string/apk_v_0_0_1"/>

    </LinearLayout>




</LinearLayout>